--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
         <a href="index.html">home</a>
-        
+        <a href="map.html">Map</a>
         <a href="blogs.html">blogs</a>
         <a href="events.html">Events</a>
        
