product page added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="map.html">Map</a>
         <a href="blogs.html">blogs</a>
         <a href="events.html">Events</a>
-       
+       <a href="products.html">Product</a>
         <a href="about.html">about us</a>
         <!-- <a href="#shop">shop</a> -->
         <!-- <a href="#packages">packages</a> -->
