--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         <a href="map.html">Map</a>
         <a href="blogs.html">blogs</a>
         <a href="events.html">Events</a>
+        <a href="adventure.html">Adventure</a>
        <a href="products.html">Product</a>
         <a href="about.html">about us</a>
+        
         <!-- <a href="#shop">shop</a> -->
         <!-- <a href="#packages">packages</a> -->
         <!-- <a href="#reviews">reviews</a> -->
