login page added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
    
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
+    
+    
 
 </head>
 <body>
@@ -91,6 +94,12 @@
         <!--<a href="#" class="fas fa-shopping-cart"></a>-->
         <div id="search-btn" class="fas fa-search"></div>
     </div>
+
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+    <a href="login.html" class="login-button" style="background-color: #55b784; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Login</a>
+
 
 </header>
 
